fixed css: word-wrap for code

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1738,6 +1738,7 @@ code {
   border-radius: 3px;
   border: solid 1px rgba(88, 110, 117, 0.2);
   color: #2B7322;
+  word-wrap: break-word;
 }
 
 .written {
